# pyxcp

./: .bumpversion.cfg  .clang-format  .codacy.yml  .codeclimate.yml  .coveralls.yml  .gitignore  .gitmodules  .pdm.toml  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .travis.yml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS  LINUX_BUILD_FIXES.md  MANIFEST.in  README.md  _setup.py  appveyor.yml  build_exe.bat  build_exe.sh  build_ext.py  hook-pyxcp.py  ls-contributors.cmd  ls-contributors.sh  pyproject.toml  reformat.cmd  requirements.txt  selective_tests.py  setup.cfg  setup.py  test_event_system.py  test_linux_build.sh  test_multicast.py  test_wp18_daq.py  test_wp18_daq_fix.py  xcp_handshake_test.py  (+1 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml  pythonapp.yml  pythonpublish.yml  sdist.yml  testing.yml
container/basic/: .tmux.conf  .zshrc  Dockerfile  build.cmd  pyxcp_conf.py  run.cmd  run.sh
docs/: FAQ.md  FAQ.rst  Makefile  README.md  README.rst  a2l_integration.rst  cli_tools.md  cli_tools.rst  conf.py  config_migration_guide.md  configuration.md  configuration.rst  custom_can_driver.md  custom_can_driver.rst  howto.md  howto.rst  howto_can_driver.md  howto_can_driver.rst  howto_cli_tools.md  howto_cli_tools.rst  index.md  index.rst  installation.md  installation.rst  linux_installation.md  logging.rst  migration_policies.rst  modules.md  modules.rst  platform_setup.md  platform_setup.rst  pyxcp.asam.rst  pyxcp.master.rst  pyxcp.rst  pyxcp.transport.rst  quickstart.md  quickstart.rst  recorder.md  recorder.rst  requirements.txt  (+3 more)
examples/: README.md  test_xcp15.py  xcp15_time_correlation.py
experimental/: README.rst
experimental/eth/: CMakeLists.txt  Makefile  eth.hpp  exceptions.hpp  iresource.hpp  itimestamp.hpp  pool.hpp  testmain.cpp
experimental/eth/benchmark/: Makefile  client.c  client.py  common.c  common.h  common.py  config.h  server.c  server.py
experimental/eth/linux/: timestamp.cpp  timestamp.hpp  utils.cpp  utils.hpp
experimental/eth/tests/: test_basic_socket.cpp  test_pool.cpp  test_timestamp.cpp
experimental/eth/win/: exceptions.cpp  exceptions.hpp  iocp.cpp  iocp.hpp  socket.cpp  socket.hpp  timestamp.cpp  timestamp.hpp
pyxcp/: .travis.yml  __init__.py  asamkeydll.c  asamkeydll.sh  checksum.py  client.py  cmdline.py  config.py  constants.py  dllif.py  errormatrix.py  events.py  logger.py  master.py  skloader.c  skloader.py  time_correlation.py  timing.py  types.py  utils.py  version.py  xcpethclient.py  xcptest.py
pyxcp/aml/: EtasCANMonitoring.a2l  EtasCANMonitoring.aml  XCP_Common.aml  XCPonCAN.aml  XCPonEth.aml  XCPonFlx.aml  XCPonSxI.aml  XCPonUSB.aml  ifdata_CAN.a2l  ifdata_Eth.a2l  ifdata_Flx.a2l  ifdata_SxI.a2l  ifdata_USB.a2l
pyxcp/asam/: types.py
pyxcp/benchmarks/: validation_framerecorder.py  validation_nooppolicy.py
pyxcp/config/: __init__.py  legacy.py
pyxcp/cpp_ext/: __init__.py  aligned_buffer.hpp  bin.hpp  blockmem.hpp  daqlist.hpp  eth_framing.hpp  eth_ptp.hpp  eth_utils.hpp  event.hpp  extension_wrapper.cpp  framing.hpp  helper.hpp  mcobject.hpp  sxi_framing.hpp  tsqueue.hpp
pyxcp/cxx/: asynchiofactory.hpp  blocking_client.cpp  blocking_socket.cpp  blocking_socket.hpp  concurrent_queue.hpp  eth.hpp  exceptions.hpp  iasyncioservice.hpp  iresource.hpp  isocket.hpp  memoryblock.hpp  pool.hpp  poolmgr.cpp  poolmgr.hpp  test_queue.cpp  timestamp.hpp  utils.cpp  utils.hpp
pyxcp/daq_stim/: __init__.py  linreg.hpp  scheduler.cpp  scheduler.hpp  stim.cpp  stim.hpp  stim_wrapper.cpp
pyxcp/docs/: Makefile  conf.py  make.bat  pyxcp.asam.rst  pyxcp.rst  pyxcp.tests.rst  pyxcp.transport.rst
pyxcp/examples/: a2l_integration.py  basic_can_connection.py  calibration.py  calibration_workflow.py  canfd_example.py  conf_can.json  conf_can.toml  conf_can_user.toml  conf_can_vector.json  conf_can_vector.toml  conf_eth.json  conf_eth.toml  conf_nixnet.json  conf_socket_can.toml  conf_sxi.json  conf_sxi.toml  daq_recording.py  ethernet_connection.py  ex_arrow.py  ex_csv.py  ex_excel.py  ex_mdf.py  ex_sqlite.py  multi_channel_can.py  multi_channel_multiprocessing.py  multi_ecu_setup.py  robust_error_handling.py  run_daq.py  xcp_policy.py  xcp_read_benchmark.py  xcp_recording.py  xcp_skel.py  xcp_unlock.py  xcp_user_supplied_driver.py  xcphello.py  xcphello_recorder.py  xcptest.py
pyxcp/master/: __init__.py  base.py  calibration.py  errorhandler.py  master.py  pre35.py  py35.py  slave_properties.py
pyxcp/recorder/: __init__.py  build.sh  build_clang.cmd  build_clang.sh  build_gcc.cmd  build_gcc.sh  build_gcc_arm.sh  decoders.hpp  mio.hpp  reader.hpp  reco.py  recorder.py  rekorder.cpp  rekorder.hpp  setup.py  test_reko.py  unfolder.hpp  wrap.cpp  writer.hpp
pyxcp/scripts/: pyxcp_probe_can_drivers.py  xcp_daq_recorder.py  xcp_discovery.py  xcp_examples.py  xcp_fetch_a2l.py  xcp_id_scanner.py  xcp_info.py  xcp_profile.py  xmraw_converter.py
pyxcp/stim/: do.cmd  main.cpp  run.cmd  scheduler.cpp  scheduler.hpp  setup.py  stim.cpp  stim.hpp  stim_wrapper.cpp
pyxcp/tests/: asamtypes.py  checksum.py  testConfig.py  testMaster.py  test_asam_types.py  test_binpacking.py  test_can.py  test_checksum.py  test_config.py  test_config_discovery.py  test_daq.py  test_daq_odt_packing.py  test_daq_opt.py  test_events.py  test_frame_padding.py  test_framing.py  test_issue_205_padding.py  test_master.py  test_max_retries.py  test_scripts.py  test_timeout_diagnostics.py  test_transport.py  test_utils.py
pyxcp/transport/: __init__.py  base.py  bth.py  can.py  eth.py  hdf5_policy.py  sxi.py  transport_ext.hpp  transport_wrapper.cpp  usb.py  usb_transport.py
pyxcp/transport/cxx_ext/: CMakeLists.txt  asynchiofactory.hpp  blocking_client.cpp  blocking_socket.cpp  blocking_socket.hpp  setup.py  timestamp.hpp  utils.hpp
pyxcp/transport/cxx_ext/tests/: test_basic_socket.cpp  test_pool.cpp  test_timestamp.cpp
pyxcp/utils/: __init__.py  cli.py
(+35 files in other folders)
