[aliases]
test=pytest

[options]
python_requires = ">=3.6"

[tool:pytest]
addopts = --verbose --tb=short --junitxml=result.xml
testpaths = pyxcp/tests
junit_family=legacy

[flake8]
max-line-length = 132
ignore = D203, E203, E266, E501, W503, F403, F401, BLK100
select = B,C,E,F,W,T4,B9
count = 1
statistics = 1
show-source = 1
exclude=.git, __pycache__, .mypy_cache, .tox, .venv, .eggs, _build, build, docs, dist

[black]
line-length = 132
exclude = .git, .mypy_cache, .tox, .venv, _build, build, docs, __pypackages__, __pycache__, dist
